# libbase-example-cmake

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: main.cc
